--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,6 +7,18 @@ jobs:
     name: A job to say hello
     steps:
       - uses: actions/checkout@v2
+      
+      - name: Setup SSH Keys and known_hosts
+        env:
+            SSH_AUTH_SOCK: /tmp/ssh_agent.sock
+        run: |
+            ssh-agent -a $SSH_AUTH_SOCK > /dev/null
+            ssh-add - <<< "${{ secrets.SSH_PRIVATE_KEY }}"
+
+      - name: Sync
+        env:
+            SSH_AUTH_SOCK: /tmp/ssh_agent.sock
+        run: ./sync.sh
       - name: Hello world action step
         id: hello
         uses: ./
