--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,6 +20,8 @@ jobs:
             SSH_AUTH_SOCK: /tmp/ssh_agent.sock
         run: ./sync.sh
       - name: Hello world action step
+        env:
+            SSH_AUTH_SOCK: /tmp/ssh_agent.sock
         id: hello
         uses: ./
         with:
